# sgh-panele-projekt

./: .gitignore  EXPORT.py  README.md  inne_tematy.md  main.py  main2.ipynb  main2.py  main_proj_eko_panel.py  pyproject.toml
docs/: temat_transfermarkt.md  tematy.md
